--- a/paths.yaml
+++ b/paths.yaml
@@ -3,7 +3,7 @@ ssv2:
     videos: /fs/vulcan-datasets/SomethingV2/20bn-something-something-v2
     # points_info: /fs/cfar-projects/actionloc/bounce_back/co-trakcer_mod/feats_sans_tskip_sans_feat/somethingv2/
     points_info: /fs/cfar-projects/actionloc/bounce_back/point_tracking/feat_dumps/somethingv2/
-    ssv2_splits: '/fs/cfar-projects/actionloc/bounce_back/dataset_csvs'
+    split_info: '/fs/cfar-projects/actionloc/bounce_back/dataset_csvs'
     destination: '/scratch0/pulkit/ssv2'
 
   zaratan:
