--- a/paths.yaml
+++ b/paths.yaml
@@ -4,27 +4,27 @@ ssv2:
     # points_info: /fs/cfar-projects/actionloc/bounce_back/co-trakcer_mod/feats_sans_tskip_sans_feat/somethingv2/
     points_info: /fs/cfar-projects/actionloc/bounce_back/point_tracking/feat_dumps/somethingv2/
     split_info: '/fs/cfar-projects/actionloc/bounce_back/dataset_csvs'
-    destination: '/scratch0/pulkit/ssv2'
+    destination: '/scratch0/huangshy/ssv2'
 
   zaratan:
     videos: /scratch/zt1/project/abhinav2-prj/user/pulkit/somethingv2/20bn-something-something-v2
     # points_info: /fs/cfar-projects/actionloc/bounce_back/co-trakcer_mod/feats_sans_tskip_sans_feat/somethingv2/
     points_info: /scratch/zt1/project/abhinav2-prj/user/pulkit/somethingv2/
-    split_info: '/scratch/zt1/project/abhinav2-prj/user/pulkit/dataset_csvs'
-    destination: '/tmp/pulkit/ssv2'
+    split_info: '/scratch/zt1/project/abhinav2-prj/user/huangshy/dataset_csvs'
+    destination: '/tmp/huangshy/ssv2'
 ucf:
   nexus:
     videos: /fs/vulcan-datasets/UCF101/videos
     points_info: /fs/cfar-projects/actionloc/bounce_back/point_tracking/feat_dumps/ucf101
     splits: /fs/cfar-projects/actionloc/bounce_back/point_tracking/few_shot_main_data_csvs
-    destination: '/scratch0/pulkit/ucf101'
+    destination: '/scratch0/huangshy/ucf101'
 
 hmdb:
   nexus:
     videos: /fs/vulcan-datasets/HMDB51/stabilized_videos
     points_info: /fs/cfar-projects/actionloc/bounce_back/point_tracking/feat_dumps/hmdb51
     splits: /fs/cfar-projects/actionloc/bounce_back/point_tracking/few_shot_main_data_csvs
-    destination: '/scratch1/pulkit/hmdb51'
+    destination: '/scratch1/huangshy/hmdb51'
 
 
 epickitchens:
@@ -32,7 +32,7 @@ epickitchens:
     videos: /fs/vulcan-datasets/EPIC-Kitchens-2020/
     # points_info: /fs/cfar-projects/actionloc/bounce_back/co-trakcer_mod/feats_sans_tskip_sans_feat/epic_kitchens/
     points_info: /fs/cfar-projects/actionloc/bounce_back/point_tracking/feat_dumps/ek100/
-    destination: '/scratch0/pulkit/ek100/'
+    destination: '/scratch0/huangshy/ek100/'
 
 k400:
   nexus:
@@ -44,8 +44,8 @@ k400:
     train_videos: /opt/data/kinetics/train_256_new
     val_videos: /opt/data/kinetics/val_256_new
     points_info: /opt/data/point_tracking/feat_dumps/kinetics
-    destination: /tmp/pulkit/kinetics
-    split_info: '/scratch/zt1/project/abhinav2-prj/user/pulkit/dataset_csvs'
+    destination: /tmp/huangshy/kinetics
+    split_info: '/scratch/zt1/project/abhinav2-prj/user/huangshy/dataset_csvs'
     
 k100:
   nexus:
@@ -53,7 +53,7 @@ k100:
     # points_info: /fs/nexus-scratch/pulkit/feats_sans_tskip_sans_feat/kinetics_molo_256/
     points_info: /fs/cfar-projects/actionloc/bounce_back/point_tracking/feat_dumps/kinetics_molo_256/
     splits: '/fs/nexus-scratch/pulkit/feats_sans_tskip_sans_feat/kinetics_molo_256/data_csvs/'
-    destination: '/scratch1/pulkit/k100_fewshot_256'
+    destination: '/scratch1/huangshy/k100_fewshot_256'
 
 
 finegym:
@@ -62,7 +62,7 @@ finegym:
     # points_info: /fs/nexus-scratch/pulkit/feats_sans_tskip_sans_feat/kinetics_molo_256/
     points_info: /fs/cfar-projects/actionloc/bounce_back/point_tracking/feat_dumps/finegym/
     splits: '/fs/cfar-projects/actionloc/bounce_back/point_tracking/dataset_csvs/data_to_transfer/'
-    destination: '/scratch1/pulkit/finegym'
+    destination: '/scratch1/huangshy/finegym'
 
 haa500:
   nexus:
@@ -70,7 +70,7 @@ haa500:
     # points_info: /fs/nexus-scratch/pulkit/feats_sans_tskip_sans_feat/kinetics_molo_256/
     points_info: /fs/cfar-projects/actionloc/bounce_back/point_tracking/feat_dumps/haa500/
     splits: '/fs/cfar-projects/actionloc/bounce_back/point_tracking/dataset_csvs/data_to_transfer/'
-    destination: '/scratch1/pulkit/haa500'
+    destination: '/scratch1/huangshy/haa500'
 
 
 diving48:
@@ -79,4 +79,4 @@ diving48:
     # points_info: /fs/nexus-scratch/pulkit/feats_sans_tskip_sans_feat/kinetics_molo_256/
     points_info: /fs/cfar-projects/actionloc/bounce_back/point_tracking/feat_dumps/diving48/
     splits: '/fs/cfar-projects/actionloc/bounce_back/point_tracking/dataset_csvs/data_to_transfer/'
-    destination: '/scratch1/pulkit/diving48'
+    destination: '/scratch1/huangshy/diving48'
