--- a/paths.yaml
+++ b/paths.yaml
@@ -1,6 +1,7 @@
 ssv2:
   nexus:
-    videos: /fs/vulcan-datasets/SomethingV2/20bn-something-something-v2
+    #videos: /fs/vulcan-datasets/SomethingV2/20bn-something-something-v2
+    videos: /fs/vulcan-datasets/SomethingV2
     # points_info: /fs/cfar-projects/actionloc/bounce_back/co-trakcer_mod/feats_sans_tskip_sans_feat/somethingv2/
     points_info: /fs/cfar-projects/actionloc/bounce_back/point_tracking/feat_dumps/somethingv2/
     split_info: '/fs/cfar-projects/actionloc/bounce_back/dataset_csvs'
@@ -43,7 +44,8 @@ k400:
   zaratan:
     train_videos: /opt/data/kinetics/train_256_new
     val_videos: /opt/data/kinetics/val_256_new
-    points_info: /opt/data/point_tracking/feat_dumps/kinetics
+    # points_info: /opt/data/point_tracking/feat_dumps/kinetics
+    points_info: /scratch/zt1/project/abhinav2-prj/user/pulkit/kineticss
     destination: /tmp/huangshy/kinetics
     split_info: '/scratch/zt1/project/abhinav2-prj/user/huangshy/dataset_csvs'
     
